fixed music and poem formatting

--- a/src/poem.html
+++ b/src/poem.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Poem Discovery // Edgy</title>
+    <title>Poem Discovery</title>
 </head>
 
 <body>
