--- a/src/music.html
+++ b/src/music.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Music Discovery // Edgy</title>
+    <title>Music Discovery</title>
 </head>
 
 <body>
